# chimken

./: Cargo.toml  LICENSE  README.md
assets/: homepage.html
src/: db.rs  id.rs  lib.rs  main.rs  ui.rs
src/db/: comment.rs  id.rs  restaurant.rs  user.rs  votes.rs
static/: styles.css
templates/: head.html  homepage.html  index.html  members.html  popular.html  restaurants.html  settings.html  signup.html  styles.css
