[package]
name = "chimken"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
axum = "0.6.4"
minijinja = "0.30.2"
mongodb = "2.3.1"
serde = { version = "1.0.152", features = ["derive"] }
shuttle-service = { version = "0.9.0", features = ["web-axum"] }
shuttle-static-folder = "0.9.0"
sync_wrapper = "0.1.2"
tokio = { version = "1.22.0", features = ["full"] }